Modificacion titulo pagina web + datos contacto + requisitos sistema

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/index.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/index.html
@@ -5,13 +5,27 @@
 <h2>{{ message }}</h2>
 
 <div class="jumbotron">
-    <h1>TUTMINING</h1>
-    TUTMINING es una aplicación web sin fines de lucro creada por Jaime Lorenzo Sánchez en 2023.
+    <h1>NETTLAERER</h1>
+    NETTLAERER es una aplicación web sin fines de lucro creada por Jaime Lorenzo Sánchez en 2023.
 
-    Se diseñó con el objetivo de ayudar a los programadores a dar sus primeros pasos en la minería de datos. 
+    Se diseñó con el objetivo de ayudar a los programadores a dar sus primeros pasos en la minería de datos.
 
     El sitio web incluye ejercicios y materiales de práctica complementarios. Los recursos o materiales de aprendizaje disponibles son gratuitos para los usuarios
 
     de su sitio web y aplicación.
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <h2>Datos de contacto</h2>
+        <p>Email: jlorenzosa@gmail.com</p>
+        <p>Telefono: 697264930</p>
+    </div>
+
+    <div class="col-md-4">
+        <h2>Requisitos del sistema</h2>
+        <p>Python 3.10.11</p>
+        <p>Django 4.2</p>
+    </div>
 </div>
 {% endblock %}
