--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
@@ -30,6 +30,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'home' %}">Inicio</a></li>
+                    <li><a href="{% url 'MineriaDatos' %}">Mineria de Datos</a></li>
                     <li><a href="{% url 'tecnologias' %}">Tecnologias</a></li>
 
                 </ul>
