Add datasets and init app html

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/AlgoritmosMiningData.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/AlgoritmosMiningData.html
@@ -6,18 +6,25 @@
 <h3>{{ message }}</h3>
 
 <div class="jumbotron">
-    <h1>Algoritmos de mineria de datos</h1>
-    <p class="lead"></p>
+    <h1>Algoritmos de minería de datos</h1>
+    <p class="lead">
+        Un algoritmo en minería de datos es un conjunto de heurísticas y cálculos que permiten crear un modelo a partir de datos.
+    </p>
+    <p>
+        <a href="https://learn.microsoft.com/es-es/analysis-services/data-mining/data-mining-algorithms-analysis-services-data-mining?view=asallproducts-allversions" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+    </p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Tutoriales</h2>
-    </div>
-    <div class="col-md-4">
-        <h2>Ejercicios Propuestos</h2>
-    </div>
+<div class="col-md">
+    <h1>Listado de algoritmos de minería de datos</h1>
+    <ul>
+        <li>Árboles de Decisión</li>
+        <li>K-means</li>
+        <li>Máquinas de Vectores Soporte</li>
+        <li>AdaBoost</li>
+        <li>Naive Baye</li>
+        
+    </ul>
 </div>
-
 
 {% endblock %}
