--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/EvaluacionResultados.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/EvaluacionResultados.html
@@ -6,18 +6,21 @@
 <h3>{{ message }}</h3>
 
 <div class="jumbotron">
-    <h1>Evaluacion de Resultados</h1>
-    <p class="lead"></p>
+    <h1>Evaluación de resultados</h1>
+    <p class="lead">
+        La evaluación de resultados se efectúa una vez que se ha obtenido el modelo, comprobando que las conclusiones obtenidas son válidas
+        y satisfactorias.
+    </p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Tutoriales</h2>
-    </div>
-    <div class="col-md-4">
-        <h2>Ejercicios Propuestos</h2>
-    </div>
+<div class="col-md">
+    <h1>Métodos de evaluación de los resultados</h1>
+    <ul>
+        <li>Precisión</li>
+        <li>Confiabilidad</li>
+        <li>Matriz de confusión</li>
+        <li>Exactitud</li>
+    </ul>
 </div>
-
 
 {% endblock %}
