--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos.html
@@ -7,17 +7,18 @@
 
 <div class="jumbotron">
     <h1>Limpieza de datos</h1>
-    <p class="lead"></p>
+    <p class="lead">
+        La limpieza de datos es un proceso que involucra detectar, eliminar, corregir o transformar cualquier anomalía, perturbación o irrelevancia de los datos.
+    </p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Tutoriales</h2>
-    </div>
-    <div class="col-md-4">
-        <h2>Ejercicios Propuestos</h2>
-    </div>
+<div class="col-md">
+    <h1>Razones para efectuar la limpieza de datos</h1>
+    <ul>
+        <li>Outliers.</li>
+        <li>Datos Nulos.</li>
+        <li>Datos erróneos e irrelevantes.</li>
+    </ul>
 </div>
-
 
 {% endblock %}
