--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/TransformacionDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/TransformacionDatos.html
@@ -6,18 +6,24 @@
 <h3>{{ message }}</h3>
 
 <div class="jumbotron">
-    <h1>Transformación de Datos</h1>
-    <p class="lead"></p>
+    <h1>Transformación de datos</h1>
+    <p class="lead">
+        Se realiza en función del análisis previo para poder prepararlo y aplicarlo a la técnica de minería de datos que mejor
+        se adapte a la información que se desea analizar.
+    </p>
+    <p>
+        <a href="https://barcelonageeks.com/transformacion-de-datos-en-mineria-de-datos/" class="btn btn-primary btn-large">Aprender más&raquo;</a>
+    </p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Tutoriales</h2>
-    </div>
-    <div class="col-md-4">
-        <h2>Ejercicios Propuestos</h2>
-    </div>
+<div class="col-md">
+    <h1>Métodos de transformación de datos</h1>
+    <ul>
+        <li>Suavizado</li>
+        <li>Agregación</li>
+        <li>Generalización</li>
+        <li>Normalización</li>
+    </ul>
 </div>
-
 
 {% endblock %}
