--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/tecnologias/Bash.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/tecnologias/Bash.html
@@ -1,4 +1,4 @@
-﻿{% extends "app/tecnologias/tecnologias.html" %}
+﻿{% extends "app/plantillaBase.html" %}
 
 {% block content %}
 
@@ -11,8 +11,6 @@
     <p><a href="https://es.ccm.net/ordenadores/linux/3810-que-es-un-shell-y-para-que-se-utiliza/" class="btn btn-primary btn-large">Aprender más&raquo;</a></p>
 </div>
 <div class="row">
-
-
     <div class="col-md-4">
         <h2>Python</h2>
         <p>Puede utilizar fácilmente Python en un script bash. Descubra cómo incrustar Python en Bash.</p>
