--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/tecnologias/Django.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/tecnologias/Django.html
@@ -1,4 +1,4 @@
-﻿{% extends "app/tecnologias/tecnologias.html" %}
+﻿{% extends "app/plantillaBase.html" %}
 
 {% block content %}
 
@@ -11,7 +11,7 @@
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Aprender más&raquo;</a></p>
 </div>
 <div class="row">
-    
+
     <div class="col-md-4">
         <h2>Obtener más librerías</h2>
         <p>Python Package Index es un repositorio de software para el lenguaje de programación Python.</p>
