--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/NETTLAERER.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/NETTLAERER.html
@@ -4,24 +4,30 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Netlaerer app</title>
+    <title>NETTLAERER app</title>
 
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     <link rel="stylesheet" href="repl.css" />
 
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+
+    <py-env>
+        - bokeh
+        - numpy
+        - pandas
+    </py-env>
+
 </head>
 
-<py-env>
-    - bokeh
-    - numpy
-    - pandas
-    - os
-</py-env>
-
 <body>
+    <div class="jumbotron">
+        <h1 class="font-semibold text-2xl ml-5">InformacionInteres</h1>
+        <p><a href="https://github.com/p72losaj/TFG/blob/main/ListadoComandos.md" class="btn btn-primary btn-large">MostrarInformacionInteres&raquo;</a></p>
+    </div>
+    
     <h1 class="font-semibold text-2xl ml-5">Custom REPL</h1>
+
     <py-box widths="2/3;1/3">
         <py-repl id="my-repl" auto-generate="true" std-out="output" std-err="err-div"> </py-repl>
         <div id="output" class="p-4"></div>
