--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/simuladorPython.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>NETTLAERER app</title>
+    <title>{% block title %}NETTLAERER{% endblock %}</title>
 
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
@@ -21,12 +21,19 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class="font-semibold text-2xl ml-5">InformacionInteres</h1>
-        <p><a href="https://github.com/p72losaj/TFG/blob/main/InformacionInteres.md" class="btn btn-primary btn-large">MostrarInformacionInteres&raquo;</a></p>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="/" class="navbar-brand">NETTLAERER</a>
+                <a href="{% url 'Datasets' %}" class="navbar-brand">Datasets</a>
+                <a href="{% url 'comandosPython' }">ComandosPython</a>
+            </div>
+        </div>
     </div>
-    
-    <h1 class="font-semibold text-2xl ml-5">Custom REPL</h1>
+
+    {% block content %}{% endblock %}
+
+    <h1 class="font-semibold text-2xl ml-5">Simulador de Python</h1>
 
     <py-box widths="2/3;1/3">
         <py-repl id="my-repl" auto-generate="true" std-out="output" std-err="err-div"> </py-repl>
