--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/simuladorPython.html
@@ -26,7 +26,7 @@
             <div class="navbar-header">
                 <a href="/" class="navbar-brand">NETTLAERER</a>
                 <a href="{% url 'Datasets' %}" class="navbar-brand">Datasets</a>
-                <a href="{% url 'comandosPython' }">ComandosPython</a>
+                <a href="{% url 'comandosPython' %}" class="navbar-brand">comandosPython</a>
             </div>
         </div>
     </div>
