--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Ejercicios/EjerciciosCSV.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Ejercicios/EjerciciosCSV.html
@@ -4,7 +4,7 @@
 <h2>{{ title }}. {{message}}</h2>
 
 <py-script>
-        
+        # TODO: REALIZA AQUI LOS EJERCICIOS PROPUESTOS
 </py-script>
 
 {% endblock %}
