--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/comandosPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/comandosPython.html
@@ -9,7 +9,9 @@
     <py-tutor>
         <py-config>
             packages = [
-                "pandas"
+                "pandas",
+                "scipy",
+                "matplotlib"
             ]
             plugins = [
             "https://pyscript.net/latest/plugins/python/py_tutor.py"
@@ -17,22 +19,55 @@
         </py-config>
         <py-script>
             # Importamos las bibliotecas
-            from datetime import datetime # Fecha actual
-            import pandas as pd # Lectura ficheros CSV
-            from pyodide.http import open_url # Lectura url
+            from datetime import datetime
+            import pandas as pd
+            from pyodide.http import open_url
+            from scipy.io import arff
+            import matplotlib.pyplot as plt
             # Fecha actual
             now = datetime.now()
             display(now.strftime("%m/%d/%Y, %H:%M:%S"))
-            # Dataset iris
+
+            # Dataset CSV
             iris = pd.read_csv(
-                open_url("https://raw.githubusercontent.com/p72losaj/Introduccion_Mineria_Datos/main/PRACTICAS/misDatasets/iris.data"),
-                header = None,
-                names=["sepal length","sepal width","petal length","petal width","class"]
+            open_url("https://raw.githubusercontent.com/p72losaj/Introduccion_Mineria_Datos/main/PRACTICAS/misDatasets/iris.data"),
+            header = None,
+            names=["sepal length","sepal width","petal length","petal width","Species"]
             )
             display("DATASET IRIS")
+
+            display("MOSTRANDO EL DATASET IRIS")
             display(iris)
+            display("IRIS INFO")
+            display(iris.info)
+
+            display("DISTRIBUCION CLASES")
+            display(iris.groupby('Species').size())
+
+            display("MOSTRANDO LA DESCRIPCION DEL DATASET IRIS")
             display(iris.describe())
+            # Mostramos la relacion entre las columnas del dataset iris
+            display("MOSTRANDO LA RELACION ENTRE LAS COLUMNAS DEL DATASET")
             display(iris.corr())
+
+
+            display("Sepal -Longitud vs Ancho")
+            
+            plt.figure(figsize = (10, 7))
+            x = iris["sepal length"]
+            plt.hist(x, bins = 20, color = "green")
+            plt.title("Sepal Length in cm")
+            plt.xlabel("Sepal_Length_cm")
+            plt.ylabel("Count")
+
+            display(plt)
+
+            # Dataset ARFF
+            dataset_arff = arff.loadarff(open_url('https://raw.githubusercontent.com/p72losaj/Introduccion_Mineria_Datos/main/PRACTICAS/misDatasets/segment-challenge.arff'))
+            df = pd.DataFrame(dataset_arff[0])
+            # Mostramos el dataset arff
+            display("MOSTRANDO EL DATASET ARFF")
+            display(df)
         </py-script>
     </py-tutor>
     <h3>Mostrando codigo empleado</h3>
