--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython/simuladorPython.html
@@ -17,6 +17,8 @@
         - numpy
         - pandas
         - scikit-learn
+        - scipy
+        - matplotlib
     </py-env>
 
 </head>
@@ -28,18 +30,17 @@
                 <a href="/" class="navbar-brand">NETTLAERER</a>
                 <a href="{% url 'Datasets' %}" class="navbar-brand">Datasets</a>
                 <a href="{% url 'comandosPython' %}" class="navbar-brand">comandosPython</a>
+                <a href="https://pyodide.org/en/stable/usage/packages-in-pyodide.html">Packetes Pyodide</a>
             </div>
         </div>
     </div>
 
-    {% block content %}{% endblock %}
-
     <h1 class="font-semibold text-2xl ml-5">Simulador de Python</h1>
 
-    <py-box widths="2/3;1/3">
-        <py-repl id="my-repl" auto-generate="true" std-out="output" std-err="err-div"> </py-repl>
+    <div style="margin-right: 3rem">
+        <py-repl id="my-repl" auto-generate="true"> </py-repl>
         <div id="output" class="p-4"></div>
-    </py-box>
+    </div>
     <footer id="err-div" class="bg-red-700 text-white text-center border-t-4 border-green-500 fixed inset-x-0 bottom-0 p-4 hidden">
     </footer>
 </body>
