--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV.html
@@ -21,7 +21,7 @@
     <div class="col-md-4">
         <h2>Ejercicios propuestos</h2>
         <ul>
-            <li><a href="{% url 'EjerciciosCSV' %}">Ejercicios CSV</a></li>
+            <li><a href="">Ejercicios CSV</a></li>
         </ul>
     </div>
 </div>
