--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV.html
@@ -17,6 +17,9 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Tutoriales</h2>
+        <ul>
+            <li><a href="https://drive.google.com/file/d/1gXXYnyxkPU4O4PStYEPCLmEp3bKAFUN9/view?usp=share_link">ObtencionDatos_CSV</a></li>
+        </ul>
     </div>
     <div class="col-md-4">
         <h2>Ejercicios propuestos</h2>
