--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV/ArchivosCSV.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV/ArchivosCSV.html
@@ -16,15 +16,15 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Tutoriales</h2>
+        <h2>Video Tutorial</h2>
         <ul>
-            <li><a href="https://drive.google.com/file/d/1gXXYnyxkPU4O4PStYEPCLmEp3bKAFUN9/view?usp=share_link">ObtencionDatos_CSV</a></li>
+            <li><a href="">HTML+Python</a></li>
         </ul>
     </div>
     <div class="col-md-4">
-        <h2>Ejercicios propuestos</h2>
+        <h2>Ejercicio propuesto</h2>
         <ul>
-            <li><a href="https://github.com/p72losaj/Bash/blob/main/ejercicios_csv.sh">Ejercicios CSV</a></li>
+            
         </ul>
     </div>
 </div>
