Actualizacion directorio datasets

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
@@ -4,8 +4,6 @@
 <h2>{{title}}</h2>
 
 <section class="pyscript">
-    <h3>Fecha de ultima actualizacion: </h3>
-
     <py-tutor>
         <py-config>
             packages = [
@@ -17,7 +15,7 @@
         </py-config>
         <py-script>
             
-
+            display("##### FIN ###############")
         </py-script>
     </py-tutor>
     
