--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Datasets.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Datasets.html
@@ -13,7 +13,7 @@
     <tr>
         <td>IRIS</td>
         <td><a href="https://raw.githubusercontent.com/p72losaj/Datasets/main/iris.data">IrisDataset</a></td>
-        <td>["sepal length","sepal width","petal length","petal width","class"]</td>
+        <td>["sepal length","sepal width","petal length","petal width","Species"]</td>
     </tr>
     <tr>
         <td>WINE</td>
