--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV/ArchivosCSV.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV/ArchivosCSV.html
@@ -18,13 +18,13 @@
     <div class="col-md-4">
         <h2>Video Tutorial</h2>
         <ul>
-            <li><a href="">HTML+Python</a></li>
+            <li><a href="https://drive.google.com/file/d/1KXzVE-ualy5Oe_q9NSnldIVzwp4mlxzr/view?usp=share_link">Py-Script</a></li>
         </ul>
     </div>
     <div class="col-md-4">
         <h2>Ejercicio propuesto</h2>
         <ul>
-            
+            <li><a href="{% url 'EjercicioCSV' %}">EjercicioCSV</a></li>
         </ul>
     </div>
 </div>
