--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosARFF/ArchivosARFF.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosARFF/ArchivosARFF.html
@@ -17,10 +17,16 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Tutoriales</h2>
+        <h2>Video Tutorial</h2>
+        <ul>
+            <li><a href="">Py-Script</a></li>
+        </ul>
     </div>
     <div class="col-md-4">
         <h2>Ejercicios propuestos</h2>
+        <ul>
+            <li><a href="{% url 'EjercicioARFF' %}">EjercicioARFF</a></li>
+        </ul>
     </div>
 </div>
 
