Mejora directorio ObtencionDatos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
@@ -15,7 +15,7 @@
 <div class="col-md">
     <h1>Razones para efectuar la limpieza de datos</h1>
     <ul>
-        <li>Outliers.</li>
+        <li><a href="{% url 'Outliers' %}">Outliers</a></li>
         <li>Datos Nulos.</li>
         <li>Datos erróneos e irrelevantes.</li>
     </ul>
