--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosCSV.html
@@ -24,7 +24,7 @@
     <div class="col-md-4">
         <h2>Ejercicio propuesto</h2>
         <ul>
-            <li><a href="{% url 'EjercicioCSV' %}">EjercicioCSV</a></li>
+            <li><a href="{% url 'EjerciciosObtencionDatos' %}">Py-Script</a></li>
         </ul>
     </div>
 </div>
