--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/EjerciciosObtencionDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/EjerciciosObtencionDatos.html
@@ -12,7 +12,7 @@
     </py-config>
     <py-script>
         display("Ejercicio. Obtenga al menos 10 conjuntos de datos en formato CSV")
-        
+        display("Ejercicio. Obtenga al menos 10 conjuntos de datos en formato ARFF")
     </py-script>
 </section>
 
