--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosARFF.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ArchivosARFF.html
@@ -25,7 +25,7 @@
     <div class="col-md-4">
         <h2>Ejercicios propuestos</h2>
         <ul>
-            <li><a href="{% url 'EjercicioARFF' %}">EjercicioARFF</a></li>
+            <li><a href="{% url 'EjerciciosObtencionDatos' %}">Py-Script</a></li>
         </ul>
     </div>
 </div>
