--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Algoritmos/AlgoritmosMiningData.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Algoritmos/AlgoritmosMiningData.html
@@ -18,12 +18,12 @@
 <div class="col-md">
     <h1>Listado de algoritmos de minería de datos</h1>
     <ul>
-        <li>Árboles de Decisión</li>
+        <li><a href="{% url 'ArbolDecision' %}">Árboles de Decisión</a></li>
         <li>K-means</li>
         <li>Máquinas de Vectores Soporte</li>
         <li>AdaBoost</li>
         <li>Naive Baye</li>
-        
+
     </ul>
 </div>
 
