--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Algoritmos/EjerciciosAlgoritmosMiningData.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/Algoritmos/EjerciciosAlgoritmosMiningData.html
@@ -8,11 +8,12 @@
         packages = [
 
         ]
-        
+
     </py-config>
     <py-script>
-        display("Ejercicio. Obtenga al menos 10 conjuntos de datos en formato ARFF")
-        
+        display("Ejercicio. Obtenga al menos 10 conjuntos de datos en formato CSV/ARFF")
+        display("Ejercicio. Diseñe un clasificador (árbol de decisión) y analice los resultados obtenidos")
+
     </py-script>
 </section>
 
