--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
@@ -16,8 +16,8 @@
     <h1>Razones para efectuar la limpieza de datos</h1>
     <ul>
         <li><a href="{% url 'Outliers' %}">Outliers</a></li>
-        <li>Datos Nulos.</li>
-        <li>Datos erróneos e irrelevantes.</li>
+        <li><a href="{% url 'DatosNulos' %}">Datos Nulos</a></li>
+        <li><a href="{% url 'DatosErroneosIrrelevantes' %}">Datos Erroneos e Irrelevantes</a></li>
     </ul>
 </div>
 
