--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
@@ -38,7 +38,7 @@
 
             # sns.countplot(x="Species", data=iris); display(plt)
 
-            sns.scatterplot(x="sepal length", y="sepal width", hue="Species", data = iris); display(plt); plt.clf()
+            sns.scatterplot(x="sepal length", y="sepal width", hue="Species", data = iris); plt.title("Sepal length - width");plt.legend();display(plt); plt.clf()
 
             display("##### FIN ###############")
         </py-script>
