--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/EvaluacionResultados/EvaluacionResultados.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/EvaluacionResultados/EvaluacionResultados.html
@@ -13,14 +13,18 @@
     </p>
 </div>
 
-<div class="col-md">
-    <h1>Métodos de evaluación de los resultados</h1>
-    <ul>
-        <li>Precisión</li>
-        <li>Confiabilidad</li>
-        <li>Matriz de confusión</li>
-        <li>Exactitud</li>
-    </ul>
+<div class="row">
+    <div class="col-md-4">
+        <h1>Métodos de evaluación de los resultados</h1>
+        <ul>
+            <li>Confiabilidad</li>
+            <li>Matriz de confusión</li>
+            <li>Recall</li>
+        </ul>
+    </div>
+    <div class="col-md-4">
+        <h1>Tutoriales</h1>
+    </div>
 </div>
 
 {% endblock %}
