--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
@@ -27,13 +27,12 @@
         </ul>
     </div>
     <div class="col-md-4">
-        <h1>Comandos de python empleados</h1>
+        <h1>Información de interés</h1>
         <ul><li><a href="{% url 'comandosPython' %}">comandosPython</a></li></ul>
-    </div>
-    <div class="col-md-4">
-        <h1>Datasets</h1>
         <ul><li><a href="{% url 'Datasets' %}">Datasets</a></li></ul>
+        <ul><li><a href="">EjerciciosPropuestos</a></li></ul></li></ul>
     </div>
+    
 
 </div>
 
