--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ObtencionDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/ObtencionDatos/ObtencionDatos.html
@@ -11,12 +11,25 @@
     calcular o inferir. Dichos datos sirven para determinar los cálculos o los procesos.</p>
 </div>
 
-<div class="col-md">
-    <h1>Tipos de archivos de datos</h1>
-    <ul>
-        <li><a href="{% url 'ArchivosCSV' %}">Archivos CSV</a></li>
-        <li><a href="{% url 'ArchivosARFF' %}">Archivos ARFF</a></li>
-    </ul>
+<div class="row">
+    <div class="col-md-4">
+        <h1>Información adicional</h1>
+        <ul>
+            <li><a href="{% url 'ArchivosCSV' %}">Archivos CSV</a></li>
+            <li><a href="{% url 'ArchivosARFF' %}">Archivos ARFF</a></li>
+        </ul>
+    </div>
+    <div class="col-md-4">
+        <h2>Tutoriales</h2>
+        <ul>
+            <li>
+                <a href="">Archivos CSV</a>
+            </li>
+            <li>
+                <a href="">Archivos ARFF</a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 
