--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/TransformacionDatos/TransformacionDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/TransformacionDatos/TransformacionDatos.html
@@ -16,14 +16,18 @@
     </p>
 </div>
 
-<div class="col-md">
-    <h1>Métodos de transformación de datos</h1>
-    <ul>
-        <li>Suavizado</li>
-        <li>Agregación</li>
-        <li>Generalización</li>
-        <li>Normalización</li>
-    </ul>
+<div class="row">
+    <div class="col-md-4">
+        <h1>Métodos de transformación de datos</h1>
+        <ul>
+            <li>Suavizado</li>
+            <li>Agregación</li>
+            <li>Generalización</li>
+            <li>Normalización</li>
+        </ul>
+    </div>
+    <div class="col-md-4"></div>
+        <h1>Tutoriales</h1>
 </div>
 
 {% endblock %}
