--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
@@ -12,13 +12,30 @@
     </p>
 </div>
 
-<div class="col-md">
-    <h1>Razones para efectuar la limpieza de datos</h1>
-    <ul>
-        <li><a href="{% url 'Outliers' %}">Outliers</a></li>
-        <li><a href="{% url 'DatosNulos' %}">Datos Nulos</a></li>
-        <li><a href="{% url 'DatosErroneosIrrelevantes' %}">Datos Erroneos e Irrelevantes</a></li>
-    </ul>
+<div class="row">
+    <div class="col-md">
+        <h1>Razones para efectuar la limpieza de datos</h1>
+        <ul>
+            <li><a href="{% url 'Outliers' %}">Outliers</a></li>
+            <li><a href="{% url 'DatosNulos' %}">Datos Nulos</a></li>
+            <li><a href="{% url 'DatosErroneosIrrelevantes' %}">Datos Erroneos e Irrelevantes</a></li>
+        </ul>
+    </div>
+    <div class="col-md-4">
+        <h2>Tutoriales</h2>
+        <ul>
+            <li>
+                <a href="">Outliers</a>
+            </li>
+            <li>
+                <a href="">Datos nulos</a>
+            </li>
+            <li>
+                <a href="">Datos Erroneos e Irrelevantes</a>
+            </li>
+        </ul>
+    </div>
 </div>
+
 
 {% endblock %}
