--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
@@ -4,46 +4,72 @@
 <h2>{{title}}</h2>
 
 <section class="pyscript">
-    <py-tutor>
-        <py-config>
-            packages = [
-                "pandas",
-                "seaborn", 
-                "matplotlib"
-            ]
-            plugins = [
+    <py-config>
+        packages = [
+            "pandas",
+            "seaborn",
+            "matplotlib",
+            "scipy"
+        ]
+        plugins = [
             "https://pyscript.net/latest/plugins/python/py_tutor.py"
-            ]
-        </py-config>
+        ]
+    </py-config>
+    <py-tutor>
         <py-script>
-            
-            # Importamos las bibliotecas
+
+            # Packetes python
+
             import pandas as pd
             from pyodide.http import open_url
             import seaborn as sns
             import matplotlib.pyplot as plt
-            
-            # Obtencion archivo CSV
-            iris = pd.read_csv(open_url("https://raw.githubusercontent.com/p72losaj/Datasets/main/iris.data"),header=None, names=["sepal length","sepal width","petal length","petal width","Species"])
-            
-            # display(iris)
-            
-            # Analisis de datos
-            
-            # display(iris.info())
+            from scipy.io import arff
 
-            # display(iris.describe())
+            # Funcion que carga un dataset
+            def obtenerDatasetCSV(url, cols):
+                dataset = pd.read_csv(open_url(url), header=None, names=cols)
+                return dataset
 
-            # display(iris.corr())
+            # Funcion que muestra la descripcion de un dataset
+            def mostrarDescripcionDatasetCSV(dataset):
+                display(dataset.describe())
 
-            # sns.countplot(x="Species", data=iris); display(plt)
+            # Funcion que muestra el grado de relación de las características de un dataset
+            def correlacionDataset(dataset):
+                display(dataset.corr())
 
-            sns.scatterplot(x="sepal length", y="sepal width", hue="Species", data = iris); plt.title("Sepal length - width");plt.legend();display(plt); plt.clf()
+            # Funcion que muestra las clases de un dataset
+            def mostrarClasesDataset(dataset,cad):
+                sns.countplot(x=cad, data=dataset); plt.title('Clases dataset ')
+                display(plt)
+                plt.clf()
 
-            display("##### FIN ###############")
+            # Funcion que muestra la distribucion de los datos de 2 caracteristicas pertenientes a las clases de un dataset
+            def distribucionDatosDataset(X,Y, HUE, dataset):
+                sns.scatterplot(x=X, y=Y, hue=HUE, data = dataset)
+                plt.title("Sepal length - width")
+                plt.legend()
+                display(plt)
+                plt.clf()
+
+            # Funcion que muestra la informacion de un dataset
+            def mostrarInformacionDatasetCSV(dataset):
+                display(dataset.info())
+
+            def main():
+                iris = obtenerDatasetCSV("https://raw.githubusercontent.com/p72losaj/Datasets/main/iris.data", 
+                                            ["sepal length","sepal width","petal length","petal width","Species"])
+                data_arff = arff.loadarff(open_url("https://raw.githubusercontent.com/p72losaj/Datasets/main/segment-challenge.arff"))
+                df = pd.DataFrame(data_arff[0]).select_dtypes([object]).stack().str.decode('utf-8').unstack()
+                mostrarClasesDataset(df, "class")
+                
+
+            if __name__ == "__main__":
+                main()
         </py-script>
     </py-tutor>
-    
+
 </section>
 
 {% endblock %}
